Add Action Icon

--- a/BrawlCrate/Properties/Resources.resx
+++ b/BrawlCrate/Properties/Resources.resx
@@ -298,4 +298,7 @@
   <data name="itembox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\itembox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MDefAction" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MDefAction.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
