--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -25,13 +25,16 @@ they be held accountable for the manner in which it is used.
  . OpenTK updated from v1.1.0 to v3.1.0
  . Add "Show Changelog" button to the help menu
  . Add ports of BrawlManagers from https://github.com/libertyernie/BrawlManagers
- . New Color Smash method: Multi-select nodes and select Color Smash from the Tools menu
+ . Add Moveset framework from v0.68b
+ . Add Folder opening support
+ . New Color Smash method: Multi-select nodes and right-click to Color Smash
  . Panning on the modelviewer freezes the mouse to allow for smoother movement
  . Add MainForm previewing of Models for BRRES and ARC nodes (check the settings)
  . Add MainForm previewing of textures in a BRRES or TPL
  . Add MainForm previewing of Collision Nodes and Collision Objects
  . Add support for Subspace Stages as Special ARC Nodes
    - Now supports auto-compression when the stage setting is active
+ . Add support for viewing string lists in REFF animations
  . Collision Objects are now parsed as children of Collision Nodes
  . Collision planes with the "Rotating" flag will now change color based on their angle, matching Brawl's implementation
  . Add rudimentary editing support for single-linked collisions
@@ -87,6 +90,7 @@ they be held accountable for the manner in which it is used.
  . Add ability to directly import materials and shaders to an MDL0
  . Add new iconography for Canary builds
  . Add support for longform assembly title, to be used for hotfixes
+ . Duplicate now works for most node types
  . Infinity/Negative Infinity buttons now display for the Stage Table editor when in degrees mode
  . Speed up rendering logic
  . Folder select dialog now uses the Vista and later styled folder select when on Windows
