--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -112,6 +112,8 @@ they be held accountable for the manner in which it is used.
  . Add support for multi-file importing for BRRES and ARC
  . Add "Export Selected" toolstrip for multi-selection
  . Add new setting to toggle context-based looping for audio sources
+ . Add support for parsing and editing of Custom My Music (CMM) files
+ . Update documentation to v0.30.0
  . Unsupported and unrecognized file types can now be opened as raw data files
  . Temp files are now opened using default OS functionality, rather than in a dedicated per-install folder
  . Duplicate now works for most node types
@@ -125,6 +127,7 @@ they be held accountable for the manner in which it is used.
  . Fix bug in which GCTs made with Code Manager would incorrectly detect the first line of code as a code title, breaking the codeset
  . Fix unintended behavior in which context menu hotkeys could be pressed when the main window is not in focus
  . Fix bug in which settings would be saved more often than intended
+ . Fix bug in which languages which use "," as a decimal separator were unable to input floats into numeric entry boxes
  . Sped up booting and removed splash screen accordingly
  
  - BrawlCrate v0.26b Hotfix 2 - (10/11/2019)
