--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.30
+BrawlCrate - v0.30 Hotfix 1
 Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,10 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+
+ - BrawlCrate v0.30 Hotfix 1 - (11/4/2019)
+ . OpenTK updated from v1.1.2349.61993 to v3.1.0
+   - Fixes crashes when viewing models
 
  - BrawlCrate v0.30 - (11/4/2019)
  . Rebuilt over the latest BrawlBox source
