--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.30 Hotfix 1
+BrawlCrate - v0.30 Hotfix 2
 Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,12 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+
+ - BrawlCrate v0.30 Hotfix 2 - (11/4/2019)
+ . OpenTK reverted to v1.1.0
+   - Fixes issue where the window would resize dependant on scaling settings
+ . MoveDef parsing is now tied to its own setting, which is off by default
+ . Fix bug in which changelog could not properly be viewed from a release build
 
  - BrawlCrate v0.30 Hotfix 1 - (11/4/2019)
  . OpenTK updated from v1.1.2349.61993 to v3.1.0
