Prep for minor release

--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.30 Hotfix 4
+BrawlCrate - v0.30b
 Copyright © 2018 - 2019 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,27 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.30b - (11/14/2019)
+ . BrawlAPI updates:
+   - Single/Multi Context Menu items added to "GenericWrapper" will now be added to all context menus
+   - Context menus with plugins are now generated quicker
+   - Added text files to keep directory intact when no plugins or loaders are added. These explain basic functionality
+   - Fixes bug in which Plugin-parsed nodes wouldn't work correctly with Export All
+ . Stage Parameters:
+   - Changed "FixedCamAngle" -> "FixedCamFOV" to match current understanding
+   - Added "Replace Gameplay Variables" and "Replace Cosmetic Variables" as context menu actions
+ . Export All Dialog:
+   - Now shows proper title when using "Replace All"
+   - Now defaults to "Ok" as selected option
+   - Now uses BrawlCrate iconography
+ . Issue reporter now uses better formatting when sending issues
+ . RSTC now supports up to 255 slots, rather than 100
+ . Speed up texture rendering when using live texture folder
+ . Fix issues where live texture folder would not properly update
+ . Fix issue where Fighter Configs would display as having children when opened as a folder
+ . Fix issue where RSTC groups would not show hex data
+ . Fix issue where some Vista Folder Browsers would display descriptions in a text box. Now display as title
  
  - BrawlCrate v0.30 Hotfix 4 - (11/8/2019)
  . Update copyright info
