--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.30e Hotfix 1
+BrawlCrate - v0.30f
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,21 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.30f - (1/15/2020)
+ . Improved Event Match parsing:
+   - "Invisible" status -> "Clear" (match in-game verbiage)
+   - Status, scale, and team are now reflected in a fighter node's name
+   - Add read-only variable for event match number
+   - "None / Select Character" will now display as one or the other based on whether the slot is the player's
+ . Improved FCFG support:
+   - "Merge Motion/Etc." -> "MotionEtc Type". Now reflects current understanding of per-costume Etc files
+   - Add support for theoretical (likely unused) character load flags A and B
+ . Visual Studio installations of Python 3.x are now correctly autodetected
+ . If a user has no plugins, the plugins menu will now properly be displayed as inactive
+ . Fix bug in which CLR0 and PAT0 animations would break materials
+ . Fix bug in which certain MSBins were incorrectly parsed as Common2MiscData, fixing issue where certain files would not fully load
+ . Fix bug in which Stage Table Nodes would not get properly cleared when replacing
  
  - BrawlCrate v0.30e Hotfix 1 - (1/5/2020)
  . Fix bug in which CHR0 could only be replaced with CHR0 files
