--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -29,7 +29,7 @@ they be held accountable for the manner in which it is used.
  . Fix bug in which duplicated MDL0 materials would not have proper names for their textures
  . Fix bug in which infinity buttons would not work in degrees mode in the attribute grid
  . Fix bug in which color and infinity buttons on attribute grid would not be properly removed
- . Fix bug in which editing values with improper formats would not be properly reflected in attribute
+ . Fix bug in which editing values with improper formats would not be properly refreshed
  
  - BrawlCrate v0.30f - (1/15/2020)
  . Improved Event Match parsing:
